# sw_startkit_examples

./: .gitignore  CHANGELOG.rst  LICENSE.txt  README.rst  startKIT_port_mapping.h  xpd.xml
app_absolute/: .cproject  .project  .xproject  Makefile  README.rst  config.xscope
app_absolute/src/: main.xc
app_adc_example/: .cproject  .project  Makefile  README.rst  config.xscope
app_audio_dalek/: .project  Makefile  README.rst
app_audio_dsp/: .cproject  .project  Makefile  README.rst
app_balance/: .cproject  .project  Makefile  README.rst
app_glowing_leds/: .cproject  .project  Makefile  README.rst
app_noughts_and_crosses/: .cproject  .project  .xproject  Makefile  README.rst  config.xscope
app_scanning_leds/: .cproject  .project  Makefile  README.rst
app_servo/: Makefile  README.rst  config.xscope  main.xc
app_spinning_bar/: .cproject  .project  .xproject  Makefile  README.rst
app_spinning_dot/: .cproject  .project  README.rst
app_spinning_wheel/: Makefile  README.rst
host_dsp_control/: Makefile  dsp_control.c
host_dsp_gui/: CMakeLists.txt
host_dsp_gui/src/: biquad_controls.cpp  biquad_controls.h  biquad_slider.h  biquad_sliders.cpp  drc_controls.cpp  drc_controls.h  drc_spinbox.cpp  drc_spinbox.h  host_dsp_gui.pro  main.cpp  mutex.c  mutex.h  queues.c  queues.h  slider_group.ui  sliders.pro  window.cpp  window.h  xscope_host_shared.c  xscope_host_shared.h
module_startkit_adc/: .cproject  .project  README.rst
module_startkit_gpio/: .cproject  .project  README.rst  module_build_info
module_startkit_servo/: README.rst  module_build_info
(+72 files in other folders)
